@@ -599,6 +599,7 @@
 	<Manufacturer id="0152" name="G.R.">
 		<Product type="0202" id="0511" name="GR105 Auto Valve" config="gr/gr105.xml"/>
 		<Product type="0003" id="0512" name="GR105n Auto Valve" config="gr/gr105n.xml"/>
+		<Product type="0500" id="0005" name="GRB3 Multichannel Switch" config="gr/grb3.xml"/>
 		<Product type="0500" id="0003" name="ZSE02 Motion Sensor"/>
 	</Manufacturer>
 	<Manufacturer id="0020" name="General Electric">
